# Riposte

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_QUALITY.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  compose_stability_config.conf  detekt-baseline.xml  detekt.yml  fix_ktlint.py  gradle.properties  gradlew  settings.gradle.kts  test_fun_fact.kts
.githooks/: README.md  install-hooks.ps1  install-hooks.sh  pre-commit  pre-commit.ps1
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  performance.md
.github/agents/: brainstorm.md  compose-ui-reviewer.md  coroutines-flow-reviewer.md  gradle-build-reviewer.md  hilt-di-reviewer.md  ml-pipeline-reviewer.md  mvi-architecture-reviewer.md  performance-ux-reviewer.md  room-database-reviewer.md  security-reviewer.md  test-coverage-reviewer.md
.github/context/: ARCHITECTURE.md  DEVELOPMENT.md  PATTERNS.md
.github/instructions/: compose.instructions.md  gradle.instructions.md  hilt.instructions.md  kotlin.instructions.md  room-database.instructions.md  testing.instructions.md
.github/skills/brainstorm/: SKILL.md
.github/skills/brainstorm/prompts/: product-visionary.md  (+1 more)
.github/skills/visual-polish/: SKILL.md
.github/workflows/: ci.yml  code-quality.yml  deploy-website.yml  fdroid.yml  pr-checks.yml  release.yml
aipacks/generic_embedding/: build.gradle.kts
aipacks/soc_optimized/: build.gradle.kts
app/: build.gradle.kts  device_targeting_config.xml  lint.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
baselineprofile/: build.gradle.kts
buildSrc/: README.md  build.gradle.kts  settings.gradle.kts
core/common/: build.gradle.kts
core/database/: build.gradle.kts
core/datastore/: build.gradle.kts
core/ml/: build.gradle.kts
core/model/: build.gradle.kts
core/search/: build.gradle.kts
core/testing/: build.gradle.kts
core/ui/: build.gradle.kts
docs/: BASELINE_PROFILES.md  BUILD_FLAVORS.md  COPILOT_SDK_API.md  GITHUB_MODELS_API.md  IMPORT_FORMATS.md  METADATA_FORMAT.md  SEMANTIC_SEARCH.md  TEST_SUITE_ISSUES.md  VISUAL_DESIGN_SPEC.md  WORKTREE_WORKFLOW.md  brainstorm-reduce-merge-conflicts.md  brainstorm-repo-concurrency-automation.md
feature/gallery/: build.gradle.kts
feature/import/: build.gradle.kts
feature/search/: build.gradle.kts
feature/settings/: build.gradle.kts
feature/share/: build.gradle.kts
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
hooks/: install.ps1  install.sh  pre-push
tools/: download-embeddinggemma.ps1
tools/meme-my-mood-cli/: .gitignore  README.md  meme-cli.spec  pyproject.toml
tools/meme-my-mood-cli/scripts/: setup.ps1  setup.sh
tools/meme-my-mood-cli/src/meme_my_mood_cli/: __init__.py  __main__.py  auth.py  config.py  copilot.py  hashing.py  main.py
tools/meme-my-mood-cli/src/meme_my_mood_cli/commands/: annotate.py
tools/meme-my-mood-cli/tests/: __init__.py  test_annotate.py  test_config.py  test_hashing.py  test_kotlin_compatibility.py
tools/riposte-cli/: README.md  pyproject.toml  riposte-cli.spec
tools/riposte-cli-dotnet/: README.md  RiposteCli.sln
tools/riposte-cli/scripts/: build.py  setup.ps1  setup.sh
tools/riposte-cli/src/riposte_cli/: __init__.py  __main__.py  auth.py  config.py  copilot.py  hashing.py  main.py
tools/riposte-cli/src/riposte_cli/commands/: annotate.py  dedupe.py
tools/riposte-cli/tests/: test_concurrency.py  test_dedupe.py  test_hashing.py  test_metadata.py
web/: .gitignore  hugo.toml
web/assets/css/: main.css
web/content/: _index.md  privacy.md  support.md  terms.md
web/layouts/: index.html
web/layouts/_default/: baseof.html
(+742 files in other folders)
